<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_bg"
    tools:context=".ASNSS">



    <ScrollView
        android:id="@+id/scrollx"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/black_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imgs1"
                    android:layout_width="107dp"
                    android:layout_height="98dp"
                    android:background="@color/white"
                    android:contentDescription="@string/todo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logon" />


                <ImageView
                    android:id="@+id/imgs2"
                    android:layout_width="103dp"
                    android:layout_height="98dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="-1dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/white"
                    android:contentDescription="@string/todo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tcet"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/edt_branch"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="30dp"
                android:hint="@string/branch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/edt_year"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/year"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/edt_rollno"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/roll_no"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/edt_div"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/division"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/dt_mobileno"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_no"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/edt_eMail"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/edt_token"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/token"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/red_bt"
                android:hint="@string/submit"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>
