<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chatRoom"
    android:background="@drawable/background_2">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/nsstcet"
                android:contentDescription="@string/NSSIMG" />

            <Button
                android:id="@+id/btn_NSS"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:background="@drawable/color_btn"
                android:text="@string/nss_btn"
                android:textSize="34sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.284" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/csitcet"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/btn_CSI"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:background="@drawable/color_btn"
                android:text="@string/csi_btn"
                android:textSize="34sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/rctcet"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/btn_RC"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:background="@drawable/color_btn"
                android:text="@string/rc_btn"
                android:textSize="34sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.655" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>